--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    hello world!
+    <h1>hello world</h1>
+    <h1>hello life</h1>
 </body>
 </html>
